--- a/ParkingFlow/Views/Bookings/Index.cshtml
+++ b/ParkingFlow/Views/Bookings/Index.cshtml
@@ -39,7 +39,7 @@
     {
         @foreach (var b in Model.OrderByDescending(b => b.BookingDate).ThenBy(b => b.StartTime))
         {
-            <div class="card shadow-sm border-0 mb-4 rounded-4 px-4 py-3 bg-white">
+            <div class="card shadow-sm border-0 mb-4 rounded-4 px-4 py-3 bg-opacity-50">
                 <div class="d-flex justify-content-between align-items-center mb-2">
                     <h5 class="fw-semibold text-danger-emphasis mb-0">
                         <i class="fa-solid fa-car-side me-2 text-secondary"></i>
