--- a/ParkingFlow/Views/Home/Index.cshtml
+++ b/ParkingFlow/Views/Home/Index.cshtml
@@ -94,9 +94,11 @@
     <div class="row align-items-center mb-5 p-4 ">
         <div class="col-md-6">
             <p>
-                Done! Once confirmed, the parking is yours for the date and duration, without worrying about finding a spot on campus!
+                Done! Once the payment and booking confirmed, the parking is yours for the date and duration you booked. Easy!
             </p>
-            
+            <p>
+                Click down below to get started!
+            </p>
             <hr />
             <a asp-controller="ParkingSlots" asp-action="Index" class="btn btn-lg btn-outline-light mt-4 px-5">Get Started</a>
         </div>
