--- a/ParkingFlow/wwwroot/css/site.css
+++ b/ParkingFlow/wwwroot/css/site.css
@@ -3,7 +3,12 @@
     letter-spacing: 1px;
     font-size: 1rem;
 }
-
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow-x: hidden;
+}
 html {
   font-size: 14px;
 }
@@ -24,7 +29,6 @@ html {
 }
 
 body {
-    margin-bottom: 60px;
     font-family: 'Share Tech Mono', monospace;
 }
 .move-left-right {
