Update: UI elements

--- a/ParkingFlow/Views/Shared/_Layout.cshtml
+++ b/ParkingFlow/Views/Shared/_Layout.cshtml
@@ -65,13 +65,26 @@
     <footer class="bg-dark text-light mt-5 pt-4 pb-3 border-top shadow-sm">
         <div class="container text-center">
             <div class="mb-3">
-                <i class="fa-brands fa-stripe fa-lg mx-2"></i>
-                <i class="fa-brands fa-microsoft fa-lg mx-2"></i>
-                <i class="fa-solid fa-database fa-lg mx-2"></i>
-                <i class="fa-brands fa-html5 fa-lg mx-2"></i>
-                <i class="fa-brands fa-css3-alt fa-lg mx-2"></i>
-                <i class="fa-brands fa-js fa-lg mx-2"></i>
-                <i class="fa-solid fa-lock mx-2"></i>
+                    <a href="https://stripe.com/nz" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-stripe fa-3x mx-2"></i><a/>
+
+                    <a href="https://dotnet.microsoft.com/en-us/apps/aspnet" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-microsoft fa-3x mx-2"></i></a>
+
+                    <a href="https://www.microsoft.com/en-us/sql-server/sql-server-downloads?msockid=31b40bb586586b781be31e4987726a5c" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-solid fa-database fa-3x mx-2"></i></a>
+
+                    <a href="https://www.w3schools.com/html/default.asp" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-html5 fa-3x mx-2"></i></a>
+
+                    <a href="https://www.w3schools.com/Css/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-css3-alt fa-3x mx-2"></i></a>
+
+                    <a href="https://github.com/TheAlgorithms/JavaScript" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-js fa-3x mx-2"></i></a>
+                    <a href="https://learn.microsoft.com/en-us/aspnet/core/security/authentication/identity?view=aspnetcore-9.0&tabs=visual-studio" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-solid fa-lock fa-3x mx-2"></i>
+                    </a>
             </div>
 
             <p class="mb-1 small">
